# routing-engine

./: .gitignore  README.md  requirements.txt
cpp/: CMakeLists.txt
cpp/include/: h3_utils.hpp  shortcut_graph.hpp
cpp/src/: h3_utils.cpp  main.cpp  shortcut_graph.cpp
docs/: data_formats.md
docs/algorithms/: many_to_many.md  one_to_one_classic.md  one_to_one_pruned.md
notebooks/: routing_prototype.ipynb
notebooks/.ipynb_checkpoints/: routing_prototype-checkpoint.ipynb
scripts/: build.sh  install_h3.sh
src/: __init__.py
